--- a/bugs042.html
+++ b/bugs042.html
@@ -16,7 +16,7 @@ if (isset($_GET['redirect'])) {
     <script>
         // Open the new tab when the button is clicked
         function openTab() {
-            const newTab = window.open('ff.php?redirect', '_blank');
+            const newTab = window.open('https://google.com', '_blank');
 
             // Wait for the new tab to load and change its content
             setTimeout(() => {
