--- a/spoof-urlbar2.html
+++ b/spoof-urlbar2.html
@@ -3,7 +3,7 @@
         var w = open()
         w.opener = null
         w.document.write('Current URL: ' + document.URL)
-        w.location = 'https://keitahaga.com/'
+        w.location = 'https://google.com/'
     }
 </script>
 <a href='JavaScript:spoof()'>Go</a>
