--- a/preview.html
+++ b/preview.html
@@ -1,6 +1,6 @@
 <script>
     window.location.href = "<head><title>google.com</title></head>"
-    w = window.open("javascript:document.write('<head><title>google.com</title></head>spoof');", "new", "width=500 height=500");
+    //w = window.open("javascript:document.write('<head><title>google.com</title></head>spoof');", "new", "width=500 height=500");
 
 </script>
 
