--- a/spoofff.html
+++ b/spoofff.html
@@ -25,7 +25,7 @@
         }, 10);
 
         // Lanjutkan dengan fungsi spoof asli
-        let win = window.open("https://wallet.coin98.com/", "_blank");
+        let win = window.open("https://www.google.com/csi", "_blank");
         
         if (!win) {
           alert("Continue..");
