--- a/spoof-aa.html
+++ b/spoof-aa.html
@@ -1,6 +1,3 @@
-<!DOCTYPE HTML>
-<html>
-
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -21,7 +18,7 @@ function p() {
 
   var t = window.open('','aa');
 
-    t.document.body.innerHTML = '<h1>This is not Amazon</h1>';
+    t.document.body.innerHTML = '<h1>Fake amazon Homepage!</h1>';
 
   t.stop();
 
