--- a/orion.html
+++ b/orion.html
@@ -1,9 +1,7 @@
-
 <button onclick="go()">Open</button>
 <script> function go(){
  var x=window.open('https://www.google.com/csi');
  setTimeout(function(){
-    x.alert("Google cannot be opened. Please go to https://evil.com");
-  x.prompt("Hello", "Yes")
+    x.alert('Google cannot be opened. Please go to https://evil.com');},1000);
 }
 </script>
