--- a/orion.html
+++ b/orion.html
@@ -2,6 +2,5 @@
 <script> function go(){
  var x=window.open('https://www.google.com/csi');
  setTimeout(function(){
-    x.alert('Google cannot be opened. Please go to https://evil.com');},1000);
-}
+    x.alert('Google cannot be opened. Please go to https://evil.com');} ,1000);}
 </script>
