--- a/spoof-scheme.html
+++ b/spoof-scheme.html
@@ -3,4 +3,4 @@ function a(){
 	window.open("abcd://google.com", "x");
 	//menggunakan scheme abcd://
 </script> 
-<button value="Go" onclick=javascript:a()>
+<button onclick="javascript:a()">Go</button>	
