--- a/spoofauth.html
+++ b/spoofauth.html
@@ -3,7 +3,7 @@
   <script>
     function spoof() {
       setTimeout(showAuthentication, 0);
-      window.open('https://google.com/csi', 'google');
+      window.open('https://lenskart-sing.myshopify.com/admin/api/customers.json', 'google');
      }
      function showAuthentication() {
        document.location = "http://www.httpwatch.com/httpgallery/authentication/authenticatedimage/default.aspx";
