--- a/spoofauth.html
+++ b/spoofauth.html
@@ -6,7 +6,7 @@
       window.open('https://google.com/', 'google');
      }
      function showAuthentication() {
-       document.location = "http://www.httpwatch.com/httpgallery/authentication/authenticatedimage/default.aspx";
+       document.location = "https://azrieeeeel.github.io/s/authtest.html";
      }
    </script>
   </head>
