--- a/spoofauth.html
+++ b/spoofauth.html
@@ -3,10 +3,10 @@
   <script>
     function spoof() {
       setTimeout(showAuthentication, 3000);
-      window.open('https://google.com/', 'google');
+      window.open('https://google.com', 'google');
      }
      function showAuthentication() {
-       document.location = "https://azrieeeeel.github.io/s/authtest.html";
+       document.location = "http://www.httpwatch.com/httpgallery/authentication/authenticatedimage/default.aspx";
      }
    </script>
   </head>
