--- a/spoofauth.html
+++ b/spoofauth.html
@@ -3,7 +3,7 @@
   <script>
     function spoof() {
       setTimeout(showAuthentication, 3000);
-      window.open('https://google.com', 'google');
+      window.open('http://www.httpwatch.com', 'google');
      }
      function showAuthentication() {
        document.location = "http://www.httpwatch.com/httpgallery/authentication/authenticatedimage/default.aspx";
