--- a/spoof-showsave.html
+++ b/spoof-showsave.html
@@ -25,7 +25,7 @@
   </style>
 </head>
 <body>
-  <h1>Click me anywhere.<br>Browse to hackerone.com and download the file from HackerOne</h1>
+  <h1>Click me anywhere.<br>Browse to google.com and download the file from google.com</h1>
 
   <script>
     document.addEventListener('click', async () => {
